--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 version: '3.4'
 
 services:
-  fastapi:
-    image: fastapi
-    build:
-      context: .
-      dockerfile: ./Dockerfile
+  app:
+    image: application
+    build: application
+    restart: always
+    network_mode: "host"
+    command: uvicorn main:app --host 127.0.0.1 --port 8000 --reload
+    volumes:
+      - ./application:/usr/src/app
+    environment:
+      - TZ=Ho_Chi_Minh
+    env_file:
+      - .env
     ports:
       - 8000:8000
