--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,12 +1,11 @@
 # Pull offical base image
-FROM python:3.9.5-slim-buster
+FROM python:3.10.5-slim-buster
 
 # Set work directory
 WORKDIR /usr/src/app
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+# Package
+# RUN apt update -y
 
 # Install dependencies
 RUN pip install --upgrade pip
