--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,10 +3,11 @@ version: '3.8'
 services:
   app:
     container_name: application
+    image: application
     build: application
-    network_mode: "host"
+    # network_mode: "host"
     restart: always
-    command: uvicorn main:app --host 127.0.0.1 --port 8001 --reload
+    command: uvicorn main:app --host 0.0.0.0 --port 8001 --reload
     volumes:
       - ./application:/usr/src/app
     environment:
@@ -15,5 +16,3 @@ services:
       - .env
     ports:
       - 8001:8001
-    # networks:
-    #   - default
